add iterative solution for A interview question